PMA-81: fix gaps & font size

--- a/src/components/common/input/styles.module.scss
+++ b/src/components/common/input/styles.module.scss
@@ -19,4 +19,5 @@
 
 .error {
   color: var(--color-red);
+  font-size: var(--font-size-100);
 }
