--- a/src/components/profile/components/styles.module.scss
+++ b/src/components/profile/components/styles.module.scss
@@ -1,7 +1,7 @@
 .form-wrapper {
   display: flex;
   flex-direction: column;
-  row-gap: 15px;
+  row-gap: 5px;
   max-width: 400px;
   width: 100%;
 
